# vislang-map

./: .gitignore  Dockerfile  README.md  pyproject.toml
data/: README.md
launch/: nerian_transform.launch  stereo_pointcloud.launch
scripts/: build_image.sh  connect_container.sh  start_container.sh
src/helpers/: activation.py  image.py
src/util/ros/camera/: __init__.py  clipseg.py
src/util/segmentation/: clipseg.py  test_clipseg.py
src/util/visualization/: mpl_live_plotter.py  plot_save.py
src/vislang_map/: __main__.py  run.py
tests/: Untitled-1.ipynb  plot_clipseg.py
tests/deprecated/: run.py
